# AI-as-Me

./: .coverage.xlerobot.1919393.XXGAjhWx  .dockerignore  .env  .env.example  .gitignore  AGENT_TEST_SUMMARY.md  AI-as-Me_Project_Status_Report.md  AI-as-Me_v3.0_Review_Report.md  AI_As_Me_Complete_SOP.md  AI_As_Me_SOP.md  CLAUDE_CODE_REMOVAL_REPORT.md  CODE_REVIEW_REQUEST.md  Dockerfile  OPENCODE_VERIFICATION.md  PR_TEMPLATE.md  RDK_X5_AI_SOP.md  README.md  RELEASE_NOTES_v2.3.md  RELEASE_NOTES_v3.0.md  RELEASE_NOTES_v3.1.md  RELEASE_NOTES_v3.4.1.md  RELEASE_NOTES_v3.4.2.md  RELEASE_NOTES_v3.4.3.md  RELEASE_NOTES_v3.4.4.md  RELEASE_NOTES_v3.4.md  RELEASE_NOTES_v3.5.0.md  debug_click.py  debug_kanban.py  deploy.sh  diagnose_kanban.py  docker-compose.yml  final_test.py  kanban_test.js  pyproject.toml  pytest.ini  setup.cfg  start_agent.py  test_agent_integration.py  test_alpine.html  test_debug.py  (+13 more)
.opencode/: README.md  config.yaml
_bmad-output/: project-context.md
config/: agents.yaml  logging.yaml  settings.yaml
data/: tasks.db
docs/: AGENT_INTEGRATION_SOP.md  AGENT_QUICK_REFERENCE.md  README.md  agent-integration-guide.md  agent-model-config-guide.md  deployment.md  environment-variables.md  project-context.md  test-architecture.md  v2.0_iteration_plan.md  v2.0_workflows.md  v3.4-dashboard-user-guide.md  workflow-status.yaml  执行监控功能改进方案SOP.md
experience/: README.md  experience-schema.json  pattern-schema.json
manual_tests/: system_health_check.py  test_agent_integration.py  test_user_journey.py
scripts/: agent_manager.py  ai-as-me.service.template  setup.sh  (+9 more)
(+484 files in other folders)
